--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -1,54 +1,70 @@
 @font-face
-  font-family: 'icomoon'
-  src:  url('../font/icomoon.eot?1dm0rc')
-  src:  url('../font/icomoon.eot?1dm0rc#iefix') format('embedded-opentype'),
-    url('../font/icomoon.ttf?1dm0rc') format('truetype'),
-    url('../font/icomoon.woff?1dm0rc') format('woff'),
-    url('../font/icomoon.svg?1dm0rc#icomoon') format('svg')
-  font-weight: normal
-  font-style: normal
+  font-family: "iconfont"
+  src: url('../font/iconfont.eot?t=1500213108999') /* IE9*/
+  src: url('../font/iconfont.eot?t=1500213108999#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('../font/iconfont.woff?t=1500213108999') format('woff'), /* chrome, firefox */
+    url('../font/iconfont.ttf?t=1500213108999') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+    url('../font/iconfont.svg?t=1500213108999#iconfont') format('svg') /* iOS 4.1- */
+
 
 [class^="icon-"], [class*=" icon-"]
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  speak: none;
-  font-style: normal
-  font-weight: normal
-  font-variant: normal
-  text-transform: none
-  line-height: 1
+  font-family:"iconfont" !important;
+  font-size:16px;
+  font-style:normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased
-  -moz-osx-font-smoothing: grayscale
+.icon-cntencentwechat:before
+  content: "\e638"
 
-.icon-music:before
-  content: "\f001"
-
-.icon-search:before
-  content: "\f002"
-
-.icon-heart:before
-  content: "\f004"
-
-.icon-user:before
-  content: "\f007"
-
-.icon-book:before
-  content: "\f02d"
-
-.icon-edit:before
-  content: "\f044"
-
-.icon-pencil-square-o:before
-  content: "\f044"
-
-.icon-camera-retro:before
-  content: "\f083"
-
-.icon-circle-o:before
-  content: "\f10c"
+.icon-back:before
+  content: "\e697"
 
 .icon-close:before
-  content: "\e903"
+  content: "\e69a"
+
+.icon-comments:before
+  content: "\e69b"
+
+.icon-delete:before
+  content: "\e69d"
+
+.icon-search:before
+  content: "\e6ac"
+
+.icon-account:before
+  content: "\e6b8"
+
+.icon-music:before
+  content: "\e640"
+
+.icon-book:before
+  content: "\e614"
+
+.icon-good:before
+  content: "\e717"
+
+.icon-circle:before
+ content: "\e669"
+
+.icon-video:before
+ content: "\e6e8"
+
+.icon-pencil:before
+  content: "\e61c"
+
+.icon-weibo:before
+ content: "\e65b"
+
+.icon-pengyouquan:before
+ content: "\e63e"
+
+.icon-favorites:before
+ content: "\e7ce"
+
+.icon-volume_right_:before
+ content: "\e60b"
+
+.icon-QQ:before
+ content: "\e8a6"
 
