opt@complete_home#:make the construction of Home component

--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -62,9 +62,18 @@
 .icon-favorites:before
  content: "\e7ce"
 
-.icon-volume_right_:before
+.icon-volume:before
  content: "\e60b"
 
 .icon-QQ:before
  content: "\e8a6"
+
+.icon-share:before
+  content: "\e63f"
+
+.icon-play:before
+  content: "\e66a"
+
+.icon-pause:before
+  content: "\e662"
 
