--- a/src/common/style/base.styl
+++ b/src/common/style/base.styl
@@ -11,7 +11,7 @@
       transform: scaleY(0.5)
 body, html {
   line-height : 1
-  font-family: 'PingFang SC', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
+  font-family: 'PingFangSC-Light', 'STHeitiSC-Light', 'Helvetica-Light', arial, sans-serif, 'Droid Sans Fallback'
   user-select: none
   -webkit-tap-highlight-color: transparent
   background: $background
