--- a/src/common/style/mixin.styl
+++ b/src/common/style/mixin.styl
@@ -1,10 +1,20 @@
-border-1px($color)
+border-1px-bottom($color)
   position: relative
   &:after
     display: block
     position: absolute
     left: 0
     bottom: 0
+    width: 100%
+    border-top: 1px solid $color
+    content: ''
+border-1px-top($color)
+  position: relative
+  &:after
+    display: block
+    position: absolute
+    left: 0
+    top: 0
     width: 100%
     border-top: 1px solid $color
     content: ''
