opt@complete_home#:the audio interface constructure

--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -77,3 +77,20 @@
 .icon-pause:before
   content: "\e662"
 
+.icon-play_forward_fill:before
+  content: "\e7f5"
+
+.icon-backwardfill:before
+  content: "\e74d"
+
+.icon-plus-square:before
+  content: "\e54b"
+
+.icon-btn_loop_d:before
+  content: "\e60e"
+
+.icon-shunxubofang:before
+  content: "\e65e"
+
+.icon-turn:before
+  content: "\e632"
