keep improving play-interface component

--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -86,11 +86,17 @@
 .icon-plus-square:before
   content: "\e54b"
 
-.icon-btn_loop_d:before
+.icon-loop:before
   content: "\e60e"
 
-.icon-shunxubofang:before
+.icon-sequence:before
   content: "\e65e"
 
 .icon-turn:before
   content: "\e632"
+
+.icon-playfill:before
+  content: "\e74f"
+
+.icon-stop:before
+  content: "\e750"
