opt@complete_home#:update

--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -100,3 +100,12 @@
 
 .icon-stop:before
   content: "\e750"
+
+.icon-all:before
+  content: "\e68d"
+
+.icon-play-full:before
+  content: "\e6b0"
+
+icon-iconfontjixieqimo:before
+  content: "\e639"
