--- a/src/common/style/font.styl
+++ b/src/common/style/font.styl
@@ -1,111 +1,124 @@
 @font-face
-  font-family: "iconfont"
-  src: url('../font/iconfont.eot?t=1500213108999') /* IE9*/
-  src: url('../font/iconfont.eot?t=1500213108999#iefix') format('embedded-opentype'), /* IE6-IE8 */
-    url('../font/iconfont.woff?t=1500213108999') format('woff'), /* chrome, firefox */
-    url('../font/iconfont.ttf?t=1500213108999') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-    url('../font/iconfont.svg?t=1500213108999#iconfont') format('svg') /* iOS 4.1- */
+  font-family: 'icomoon'
+  src:  url('../font/icomoon.eot?o5mph2')
+  src:  url('../font/icomoon.eot?o5mph2#iefix') format('embedded-opentype'),
+    url('../font/icomoon.ttf?o5mph2') format('truetype'),
+    url('../font/icomoon.woff?o5mph2') format('woff'),
+    url('../font/icomoon.svg?o5mph2#icomoon') format('svg')
+  font-weight: normal
+  font-style: normal
 
 
 [class^="icon-"], [class*=" icon-"]
-  font-family:"iconfont" !important;
-  font-size:16px;
-  font-style:normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important
+  speak: none
+  font-style: normal
+  font-weight: normal
+  font-variant: normal
+  text-transform: none
+  line-height: 1
 
-.icon-cntencentwechat:before
-  content: "\e638"
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
 
-.icon-back:before
-  content: "\e697"
+.icon-playback-fast-forward:before
+  content: "\f0bd"
 
+.icon-playback-pause:before
+  content: "\f0bb"
+
+.icon-playback-play:before
+  content: "\f0bf"
+
+.icon-playback-rewind:before
+  content: "\f0bc"
+.icon-add_box:before
+  content: "\e146"
 .icon-close:before
-  content: "\e69a"
+  content: "\e5cd"
+.icon-dehaze:before
+  content: "\e3c7"
 
-.icon-comments:before
-  content: "\e69b"
+.icon-playlist_play:before
+  content: "\e05f"
 
-.icon-delete:before
-  content: "\e69d"
+.icon-repeat_one:before
+  content: "\e041"
 
-.icon-search:before
-  content: "\e6ac"
+.icon-wrap_text:before
+  content: "\e25b"
 
-.icon-account:before
-  content: "\e6b8"
+.icon-bookmark:before
+  content: "\e903"
 
-.icon-music:before
-  content: "\e640"
+.icon-chevron-down:before
+  content: "\e904"
 
-.icon-book:before
-  content: "\e614"
+.icon-chevron-left:before
+  content: "\e905"
 
-.icon-good:before
-  content: "\e717"
+.icon-chevron-right:before
+  content: "\e906"
+
+.icon-chevron-up:before
+  content: "\e907"
 
 .icon-circle:before
- content: "\e669"
+  content: "\e908"
 
-.icon-video:before
- content: "\e6e8"
+.icon-corner-up-right:before
+  content: "\e909"
 
-.icon-pencil:before
-  content: "\e61c"
+.icon-edit-2:before
+  content: "\e90a"
 
+.icon-film:before
+  content: "\e90b"
+
+.icon-grid:before
+  content: "\e90c"
+
+.icon-heart:before
+  content: "\e90d"
+
+.icon-list:before
+  content: "\e90e"
+
+.icon-mail:before
+  content: "\e90f"
+
+.icon-message-square:before
+  content: "\e910"
+
+.icon-music:before
+  content: "\e911"
+
+.icon-play-circle:before
+  content: "\e912"
+
+.icon-search:before
+  content: "\e913"
+
+.icon-settings:before
+  content: "\e914"
+
+.icon-thumbs-up:before
+  content: "\e915"
+
+.icon-user:before
+  content: "\e916"
+
+.icon-users:before
+  content: "\e917"
+.icon-qq:before
+  content: "\f1d6"
+.icon-chain:before
+  content: "\f0c1"
+.icon-wechat:before
+  content: "\f1d7"
+.icon-pyq:before
+  content: "\e900"
 .icon-weibo:before
- content: "\e65b"
-
-.icon-pengyouquan:before
- content: "\e63e"
-
-.icon-favorites:before
- content: "\e7ce"
-
-.icon-volume:before
- content: "\e60b"
-
-.icon-QQ:before
- content: "\e8a6"
-
-.icon-share:before
-  content: "\e63f"
-
-.icon-play:before
-  content: "\e66a"
-
-.icon-pause:before
-  content: "\e662"
-
-.icon-play_forward_fill:before
-  content: "\e7f5"
-
-.icon-backwardfill:before
-  content: "\e74d"
-
-.icon-plus-square:before
-  content: "\e54b"
-
-.icon-loop:before
-  content: "\e60e"
-
-.icon-sequence:before
-  content: "\e65e"
-
-.icon-turn:before
-  content: "\e632"
-
-.icon-playfill:before
-  content: "\e74f"
-
-.icon-stop:before
-  content: "\e750"
-
-.icon-all:before
-  content: "\e68d"
-
-.icon-play-full:before
-  content: "\e6b0"
-
-icon-iconfontjixieqimo:before
-  content: "\e639"
+  content: "\ea9a"
