--- a/src/common/style/var.styl
+++ b/src/common/style/var.styl
@@ -2,6 +2,7 @@
 $color-content = #333  //标题字体颜色
 $color-desc = #808080  //
 $background = #eee //主体背景颜色
+$border = #ccc
 //字体
 $font-size-small-s = 10px
 $font-size-small = 12px
